# ccp-patient-project-identificator

./: .gitignore  Cargo.toml  LICENSE  README.md  default.env  deny.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: config.rs  fhir.rs  main.rs  mainzelliste.rs
