[package]
name = "Patient-Project-Identificator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["env", "derive"]}
once_cell = "1.19.0"
reqwest = {version = "0.12.4", features = ["json", "blocking", "rustls-tls"] }
serde = {version = "1.0.203", features = ["serde_derive"]}
serde_json = "1.0.117"
tokio = {version = "1.38.0", features = ["full"]}
tokio-macros = "2.3.0"

#Remove
rustls = { version = "0.22.0-alpha.6" }