[package]
name = "Patient-Project-Identificator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "4.5", features = ["env", "derive"]}
once_cell = "1.19"
reqwest = {version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = {version = "1", features = ["serde_derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
